...
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/productDetailsGuidelineStart"
        app:layout_constraintBottom_toTopOf="@id/productDetailsGuidelineTop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUnitAdjustmentSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_orange"
        android:text="Search"
        android:textColor="#ffffff"
        android:textStyle="bold"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp">

            <TextView
                android:id="@+id/tvUnitIdTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                android:text="Unit ID"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@id/tvUnitIdTitle"
                app:layout_constraintStart_toStartOf="@id/tvUnitIdTitle"
                app:layout_constraintEnd_toEndOf="@id/tvUnitIdTitle"/>

            <TextView
                android:id="@+id/tvUnitAdjustmentProductIdTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Product ID"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edtUnitAdjustmentUnitId"
                app:layout_constraintStart_toStartOf="@id/edtUnitAdjustmentUnitId"
                app:layout_constraintEnd_toEndOf="@id/edtUnitAdjustmentUnitId" />
...
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@id/tvUnitAdjustmentProductIdTitle"
                app:layout_constraintStart_toStartOf="@id/tvUnitAdjustmentProductIdTitle"
                app:layout_constraintEnd_toEndOf="@id/tvUnitAdjustmentProductIdTitle"/>

            <TextView
                android:id="@+id/tvUnitAdjustmentLocationNameTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Location"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edtUnitAdjustmentProductId"
                app:layout_constraintStart_toStartOf="@id/edtUnitAdjustmentProductId"
                app:layout_constraintEnd_toEndOf="@id/edtUnitAdjustmentProductId"/>
...
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@id/tvUnitAdjustmentLocationNameTitle"
                app:layout_constraintStart_toStartOf="@id/tvUnitAdjustmentLocationNameTitle"
                app:layout_constraintEnd_toEndOf="@id/tvUnitAdjustmentLocationNameTitle"/>

            <TextView
                android:id="@+id/tvUnitAdjustmentZoneTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Zone"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edtUnitAdjustmentLocationName"
                app:layout_constraintStart_toStartOf="@id/edtUnitAdjustmentLocationName"
                app:layout_constraintEnd_toEndOf="@id/edtUnitAdjustmentLocationName"/>
...
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:background="@color/royal"
                android:elevation="15dp"
                android:padding="12dp"
                android:text="Submit"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edtUnitAdjustmentTotalPieces"
                app:layout_constraintEnd_toEndOf="@id/edtUnitAdjustmentTotalPieces"
...
