...
    android:background="#A186BE"
    tools:context=".views.LocationsSubMenu">

    <!--    Inventory-->

    <ImageButton
        android:id="@+id/inventorySubMenuShowInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/statelistdrawable_white"
        android:elevation="10dp"
        android:padding="30dp"
        android:src="@drawable/ic_inventory_64px"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintEnd_toStartOf="@id/guidelineMiddle"/>

    <TextView
        android:id="@+id/inventorySubMenuShowInventoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Inventory"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inventorySubMenuShowInventory"
        app:layout_constraintStart_toStartOf="@+id/inventorySubMenuShowInventory"
        app:layout_constraintTop_toBottomOf="@+id/inventorySubMenuShowInventory" />

    <!--   Adjustment-->
    <ImageButton
        android:id="@+id/inventorySubMenuAdjustment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/statelistdrawable_white"
        android:elevation="10dp"
        android:padding="30dp"
        android:src="@drawable/ic_gears_64px"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"/>

    <TextView
        android:id="@+id/inventorySubMenuAdjustmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Adjustment"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inventorySubMenuAdjustment"
        app:layout_constraintStart_toStartOf="@+id/inventorySubMenuAdjustment"
        app:layout_constraintTop_toBottomOf="@+id/inventorySubMenuAdjustment" />

    <!--    Move Unit-->
    <ImageButton
        android:id="@+id/inventorySubMenuMoveUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/statelistdrawable_white"
        android:elevation="10dp"
        android:padding="30dp"
...
        app:layout_constraintEnd_toEndOf="@+id/inventorySubMenuShowInventory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inventorySubMenuShowInventory"
        app:layout_constraintTop_toBottomOf="@+id/inventorySubMenuShowInventoryTitle" />

    <TextView
        android:id="@+id/locationsSubMenuUnitsOfMeasureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Move Unit"
        android:textAlignment="center"
        android:textAllCaps="true"
...
