<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foregroundTint="@color/black"
    tools:context=".views.ItemList">

...
        app:layout_constraintBottom_toTopOf="@id/itemListGuidelineTop"
        app:layout_constraintEnd_toEndOf="@id/itemListGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/itemListGuidelineStart"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svInventoryList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_background"
            android:gravity="left|center"
            android:queryHint="Search..."
            app:queryHint="Search..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemListGuidelineMiddleRight"/>

        <ImageButton
            android:id="@+id/ibInventoryListFilter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="filter"
            android:elevation="10dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_filter_64px"
            android:background="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
...
