...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log">

    <EditText

        android:id="@+id/idEdtLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_white"
        android:hint="Enter Email-Address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMiddlescreen" />

    <EditText
        android:id="@+id/idEdtLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners_white"
        android:hint="Enter Password"
        android:importantForAutofill="no"
...
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/idEdtLoginEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idLoginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/royal"
        android:padding="10dp"
        android:text="Login"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/idEdtLoginPassword" />

...
